--- a/web/js/views/home.html
+++ b/web/js/views/home.html
@@ -6,3 +6,20 @@ and open the template in the editor.
 
 <h1>home</h1>
 <span data-bind="text:myMessage"></span>
+<div id="sampleDemo" style="" class="demo-padding demo-container">
+      <div id="componentDemoContent" style="width: 1px; min-width: 100%;">
+        <div id='chart-container'>
+            <oj-chart
+                type="bubble"
+                series="[[bubbleSeriesValue]]"
+                groups="[[bubbleGroupsValue]]" 
+                animation-on-display="auto"
+                animation-on-data-change="auto"
+                hover-behavior="dim"
+                style="max-width:500px;width:100%;height:350px;">
+            </oj-chart>
+        </div>
+
+        
+      </div>
+    </div>
